# VideoToAscii

./: Cargo.toml  README.md  comp.wgsl  index.html  shader.wgsl  style.css
.github/workflows/: rust.yml
src/: buffers.rs  context.rs  font_atlas.rs  main.rs  pipeline.rs
