[package]
name = "v2a_web"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "GpuDevice", "GpuAdapter", "GpuQueue", "Window", "Document", 
    "HtmlCanvasElement", "HtmlInputElement", "HtmlVideoElement", 
    "CanvasRenderingContext2d",
    "File", "FileList", "Url", "Event"
] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1.7"
bytemuck = { version = "1.24", features = [ "derive" ] }
winit = { version = "0.30.13", features = [ "rwh_05" ] }

